--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
 @import './reset.scss';
 $appBackground: #303030;
-$titleColor: #37A59A;
+$titleColor: #ff4500;
 
 @mixin inColumn() {
   height: 100%;
