--- a/src/index.scss
+++ b/src/index.scss
@@ -24,7 +24,7 @@ $titleColor: #ff4500;
 
   .formulaire {
     min-height: 100vh;
-    background-color: aliceblue;
+    background-color: lightgrey;
 
     .openDataForm {
       @include inColumn();
